--- a/src/app/features/escuela/escuela.component.html
+++ b/src/app/features/escuela/escuela.component.html
@@ -5,18 +5,20 @@
   </header>
 
   <div class="sections-grid">
-    <a 
+    <button 
       *ngFor="let section of sections" 
-      [routerLink]="section.route"
+      (click)="navigateToSection(section.route)"
       class="section-card"
-      [attr.data-id]="section.id">
-      <img [src]="'assets/images/escuela/' + section.id + '.svg'" alt="{{ section.title }}" class="section-image">
+      [attr.data-id]="section.id"
+      type="button">
+      <img [src]="section.image" alt="{{ section.title }}" class="section-image">
       <div class="section-icon">{{ section.icon }}</div>
       <h2 class="section-title">{{ section.title }}</h2>
       <p class="section-description">{{ section.description }}</p>
       <div class="section-arrow">→</div>
-    </a>
+    </button>
   </div>
 
+  <div #contentArea></div>
   <router-outlet></router-outlet>
 </div>
