--- a/src/app/features/escuela/escuela.component.scss
+++ b/src/app/features/escuela/escuela.component.scss
@@ -181,6 +181,13 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  font-family: inherit;
+  font-size: 1rem;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &::before {
     content: '';
